# k9

./: .dockerignore  .env.example  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  Dockerfile.multistage  HANDLER_DAILY_SYSTEM.md  K9_SYSTEM_DOCUMENTATION.md  LOCAL_SETUP_GUIDE.md  MIGRATION_SUMMARY.md  README.md  ROUTE_STRUCTURE.md  TEST_DATA_SUMMARY.md  TROUBLESHOOTING.md  app.py  config.py  cookies.txt  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  docker-entrypoint.sh  fix_common_issues.py  local_dev_guide.py  nginx.conf.example  populate_activities.py  populate_activity_data.py  populate_comprehensive.py  populate_data.py  populate_test_data.py  pyproject.toml  pytest.ini  quick_populate.py  replit.md  setup-git-author.sh  setup_launcher.py  setup_local.py  simple_populate.py  troubleshooting_guide.py  verify_setup.py
attached_assets/: Pasted---1761440937902_1761440937903.txt  Pasted--SQL-SELECT-dog-id-AS-dog-id-dog-name-AS-dog-name-dog-code-AS-dog-code-dog-breed-AS-dog-breed--1757677766582_1757677766582.txt  Pasted--SQL-SELECT-dog-id-AS-dog-id-dog-name-AS-dog-name-dog-code-AS-dog-code-dog-breed-AS-dog-breed-d-1757677757574_1757677757575.txt  Pasted-Error-psycopg2-errors-NotNullViolation-null-value-in-column-project-id-of-relation-deworming-l-1758737320684_1758737320693.txt  Pasted-I-want-to-migrate-the-K9-Operations-Management-System-to-a-modern-tech-stack-while-maintaining-all-c-1761619162485_1761619162486.txt  التقرير اليومي للسائس-1_1761440961994.docx  تقرير يومي للمربي-1_1757697508476.docx  (+9 more)
backend_fastapi/: .env.example  app.py  (+5 more)
(+387 files in other folders)
